Add new style file

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="style.css">
+   <link rel="stylesheet" href="/css/style.css">
    <title>Project_sample_4</title>
 </head>
 
@@ -15,38 +15,76 @@
 
    <section id='side_navigation'>
       <div id="mySidenav" class="sidenav">
-         <img src="logo.png" alt="" id="logo">
-         <img src="hamburger.png" alt="" id="hamburger">
-         <a href="#"><img src="general.png" alt="">General</a>
-         <a href="#"><img src="details.png" alt="">Details</a>
-         <a href="#"><img src="links.png" alt="">Links</a>
-         <a href="#"><img src="banners.png" alt="">Banners</a>
-         <a href="#"><img src="Vector_Smart_Object@2x.png" alt="">Personal data</a>
-         <a href="#"><img src="payout.png" alt="">Payout</a>
-         <a href="#"><img src="postback.png" alt="">Postback</a>
+         <img src="/images/icons/logo.png" alt="" id="logo">
+         <img src="/images/icons/hamburger.png" alt="" id="hamburger">
+         <a href="#"><img src="/images/icons/general.png" alt="">General</a>
+         <a href="#"><img src="/images/icons/details.png" alt="">Details</a>
+         <a href="#"><img src="/images/icons/links.png" alt="">Links</a>
+         <a href="#"><img src="/images/icons/banners.png" alt="">Banners</a>
+         <a href="#"><img src="/images/icons/Vector_Smart_Object@2x.png" alt="">Personal data</a>
+         <a href="#"><img src="/images/icons/payout.png" alt="">Payout</a>
+         <a href="#"><img src="/images/icons/postback.png" alt="">Postback</a>
          <hr>
          <p>Your menager</p>
          <div class='menager'>
             <div class="circle"></div>
-            <img src="photo.png" alt="">
+            <img src="/images/icons/photo.png" alt="">
             <p>Mikhael E.</p>
          </div>
       </div>
 
    </section>
-   
+
+  
    <section id="top_navigation">
+      <div id="cash" class="top_inside">
+         <img src="/images/icons/wallet.png" alt="">
+         <p>$1,5000.00</p>
+         <img src="/images/icons/arrow-down.png" alt="">
+      </div>
+      <div id="not" class="top_inside">
+        <div class="circle_top"></div>
+         <img src="/images/icons/notifications.png" alt="" class='arrow-down'>
+      </div>
+      <div id="leo" class="top_inside">
+         <img src="/images/icons/profile.png" alt="">
+         <p>Leonardo Dicaprio</p>
+      </div>
+      <div id="back" class="top_inside">
+         <img src="/images/icons/exit.png" alt="">
+      </div>
       
-   </section><section id="inside">
-   </section><section id="inside">
-      
+   </section>
+
+   <section id="inside">
+      <div class='top'>
+         <p>General statistic</p>
+      </div>
+      <div id="datapicker">
+         <div class="dataChoose"></div>
+      </div>
+      <div id="diagrams"></div>
+      <div id="links">
+         <div class='top'>
+            <p>Links</p>
+         </div>
+      </div>
+
+
+
+
+   </section>
+
+
+   <section id="inside2">
+
    </section>
 
 
 
 
 
-   <script src="script.js"></script>
+   <script src="/js/script.js"></script>
 </body>
 
 </html>
