--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
    </section>
 
-  
+
    <section id="top_navigation">
       <div id="cash" class="top_inside">
          <img src="/images/icons/wallet.png" alt="">
@@ -43,7 +43,7 @@
          <img src="/images/icons/arrow-down.png" alt="">
       </div>
       <div id="not" class="top_inside">
-        <div class="circle_top"></div>
+         <div class="circle_top"></div>
          <img src="/images/icons/notifications.png" alt="" class='arrow-down'>
       </div>
       <div id="leo" class="top_inside">
@@ -53,27 +53,42 @@
       <div id="back" class="top_inside">
          <img src="/images/icons/exit.png" alt="">
       </div>
-      
+
    </section>
 
-   <section id="inside">
-      <div class='top'>
+   <section id="inside_top">
+      <div id='top' class="inside_middle">
          <p>General statistic</p>
       </div>
-      <div id="datapicker">
-         <div class="dataChoose"></div>
+      <div id="data_picker" class="inside_middle">
+         <div class="data_choose"></div>
+         <div id="icon_inside">
+            <div id="data_choose_icon_one">
+               <img src="/images/icons/Rounded_Rectangle_1_copy_2.png" alt="">
+            </div>
+            <div id="data_choose_icon_two">
+               <img src="/images/icons/back.png" alt="">
+            </div> 
+         </div>
+         
+
       </div>
-      <div id="diagrams"></div>
-      <div id="links">
+   </section>
+
+   <section id="inside_links">
+      <div id="diagrams" class="inside_middle"></div>
+      <div id="links" class="inside_middle">
          <div class='top'>
             <p>Links</p>
          </div>
       </div>
-
-
-
-
    </section>
+
+
+
+
+
+
 
 
    <section id="inside2">
