--- a/index.html
+++ b/index.html
@@ -13,18 +13,19 @@
 
    <!--                       Side nav                        -->
 
+   
 
    <section id='side_navigation'>
       <div id="mySidenav" class="sidenav">
          <img src="/images/icons/logo.png" alt="" id="logo">
-         <img src="/images/icons/hamburger.png" alt="" id="hamburger">
-         <a href="#"><img src="/images/icons/general.png" alt="">General</a>
-         <a href="#"><img src="/images/icons/details.png" alt="">Details</a>
-         <a href="#"><img src="/images/icons/links.png" alt="">Links</a>
-         <a href="#"><img src="/images/icons/banners.png" alt="">Banners</a>
-         <a href="#"><img src="/images/icons/Vector_Smart_Object@2x.png" alt="">Personal data</a>
-         <a href="#"><img src="/images/icons/payout.png" alt="">Payout</a>
-         <a href="#"><img src="/images/icons/postback.png" alt="">Postback</a>
+         <img src="/images/icons/hamburger.png" alt="" class="hamburger">
+         <a href="#"><img src="/images/icons/general.svg" alt="">General</a>
+         <a href="#"><img src="/images/icons/details.svg" alt="">Details</a>
+         <a href="#"><img src="/images/icons/links.svg" alt="">Links</a>
+         <a href="#"><img src="/images/icons/banners.svg" alt="">Banners</a>
+         <a href="#"><img src="/images/icons/Vector_Smart_Object.svg" alt="">Personal data</a>
+         <a href="#"><img src="/images/icons/payout.svg" alt="">Payout</a>
+         <a href="#"><img src="/images/icons/postback.svg" alt="">Postback</a>
          <hr>
          <p>Your menager</p>
          <div class='menager'>
