Add style nad components

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="pl">
 
 <head>
@@ -56,7 +56,12 @@
          <p>Leonardo Dicaprio</p>
       </div>
       <div id="back" class="top_inside">
-         <img src="/images/icons/exit.png" alt="">
+         <div class="scroll-wrapper">
+            <table>
+               <img src="/images/icons/exit.png" alt="">
+            </table>
+         </div>
+
       </div>
 
    </section>
