--- a/index.html
+++ b/index.html
@@ -139,13 +139,13 @@
             <p>Net deposit<span>564</span></p>
          </div>
          <div class="numbers">
-            <p>FTD <span>445</span></p>
+            <p>FTD<span>445</span></p>
          </div>
          <div class="numbers">
             <p>Turn over<span>432</span></p>
          </div>
          <h3>Earnings chart</h3>
-         <img src="images/icons/graph.png" alt="">
+         <canvas id="myChart"></canvas>
       </div>
    </section>
 
@@ -169,8 +169,8 @@
                <a href="#">http://www.homepage.com</a>
             </div>
             <div class="row-inner-1-4 icons">
-               <img src="/images/icons/link.png" alt="">
-               <img src="/images/icons/delete.png" alt="">
+               <img src="images/icons/link.png" alt="">
+               <img src="images/icons/delete.png" alt="">
             </div>
          </div>
          <div class="row">
@@ -181,20 +181,20 @@
                <a href="#">http://www.currently.com</a>
             </div>
             <div class="row-inner-1-4 icons">
-               <img src="/images/icons/link.png" alt="">
-               <img src="/images/icons/delete.png" alt="">
+               <img src="images/icons/link.png" alt="">
+               <img src="images/icons/delete.png" alt="">
             </div>
          </div>
          <div class="row">
-            <div class="row-inner-1-4 padding">
+            <div class="row-inner-1-4  padding">
                <p>Blurpix</p>
             </div>
-            <div class="row-inner-1-2">
+            <div class="row-inner-1-2 ">
                <a href="#">http://blurpix.com</a>
             </div>
             <div class="row-inner-1-4 icons">
-               <img src="/images/icons/link.png" alt="">
-               <img src="/images/icons/delete.png" alt="">
+               <img src="images/icons/link.png" alt="">
+               <img src="images/icons/delete.png" alt="">
             </div>
          </div>
          <div class="row">
@@ -205,8 +205,8 @@
                <a href="#">http://yoursite.com</a>
             </div>
             <div class="row-inner-1-4 icons">
-               <img src="/images/icons/link.png" alt="">
-               <img src="/images/icons/delete.png" alt="">
+               <img src="images/icons/link.png" alt="">
+               <img src="images/icons/delete.png" alt="">
             </div>
          </div>
          <div class="row">
@@ -217,8 +217,8 @@
                <a href="#">http://google.com</a>
             </div>
             <div class="row-inner-1-4 icons">
-               <img src="/images/icons/link.png" alt="">
-               <img src="/images/icons/delete.png" alt="">
+               <img src="images/icons/link.png" alt="">
+               <img src="images/icons/delete.png" alt="">
             </div>
          </div>
          <div class="row">
@@ -229,8 +229,8 @@
                <a href="#">http://facebook</a>
             </div>
             <div class="row-inner-1-4 icons">
-               <img src="/images/icons/link.png" alt="">
-               <img src="/images/icons/delete.png" alt="">
+               <img src="images/icons/link.png" alt="">
+               <img src="images/icons/delete.png" alt="">
             </div>
          </div>
          <div class="row">
@@ -241,8 +241,8 @@
                <a href="#">http://dashboar.com</a>
             </div>
             <div class="row-inner-1-4 icons">
-               <img src="/images/icons/link.png" alt="">
-               <img src="/images/icons/delete.png" alt="">
+               <img src="images/icons/link.png" alt="">
+               <img src="images/icons/delete.png" alt="">
             </div>
          </div>
          <div class="row">
@@ -253,8 +253,8 @@
                <a href="#">http://blurax.com</a>
             </div>
             <div class="row-inner-1-4 icons">
-               <img src="/images/icons/link.png" alt="">
-               <img src="/images/icons/delete.png" alt="">
+               <img src="images/icons/link.png" alt="">
+               <img src="images/icons/delete.png" alt="">
             </div>
          </div>
          <div class="row">
@@ -265,8 +265,8 @@
                <a href="#">http://pieceofwine.com</a>
             </div>
             <div class="row-inner-1-4 icons">
-               <img src="/images/icons/link.png" alt="">
-               <img src="/images/icons/delete.png" alt="">
+               <img src="images/icons/link.png" alt="">
+               <img src="images/icons/delete.png" alt="">
             </div>
          </div>
          <div class="row">
@@ -277,8 +277,8 @@
                <a href="#">http://twitter.com</a>
             </div>
             <div class="row-inner-1-4 icons">
-               <img src="/images/icons/link.png" alt="">
-               <img src="/images/icons/delete.png" alt="">
+               <img src="images/icons/link.png" alt="">
+               <img src="images/icons/delete.png" alt="">
             </div>
          </div>
          <button>+ add new</button>
@@ -294,7 +294,7 @@
 
 
 
-
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
    <script src="/js/script.js"></script>
 </body>
 
