--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 
 
    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
-   <script src="/js/script.js"></script>
+   <script src="js/script.js" type="text/javascript"></script>
 </body>
 
 </html>
