--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       </div>
 
       <!--Data picker-->
-      <div id="data_picker" class="inside_middle">
+      <div id="data_picker">
          <div id="data_choose">
             <div class="data_choose_inside" id="one">
                <p>16.05.2016</p>
@@ -156,7 +156,7 @@
 
 
    <section id="inside_bottom">
-      <div class="inside_middle">
+      <div class="links_top">
          <h2>Links</h2>
       </div>
       <div id="links">
