--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       </div>
    </section>
 
-   <!--                       Inside Bottom Links                     -->
+   <!--                       Inside Middle Links                     -->
 
 
 
@@ -281,14 +281,29 @@
                <img src="images/icons/delete.png" alt="">
             </div>
          </div>
-         <button>+ add new</button>
+         <button class="open_modal">+ add new</button>
 
 
       </div>
 
 
    </section>
+   
+   <section id="inside_modal">
+      <div class="overlay" id="overlay">
+         <div class="modal" id="myModal">
+            <div class="btn-close js--close-modal">x</div>
 
+            <h4>Witaj w modalu!</h4>
+            <p>Lorem ipsum dolor sit amet...</p>
+
+            <button class="js--close-modal">Okay</button>
+         </div>
+      </div>
+   </section>
+   
+
+   
 
 
 
